--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -607,9 +607,9 @@
         <h2 class="sub-heading">Environment Calculators</h2>
         <div class="button-container">
             <a href="ambientnoisecal.html" class="calculator-btn">Ambient Noise Level Calculator</a>
-            <!-- <a href="airpollutioncal.html" class="calculator-btn">Air Pollution - Gaussian Plume Model Calculator</a> -->
+            <a href="airflowrate.html" class="calculator-btn">Air Flow Rate Calculator</a>
+            <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental(Impact) Carbon Footprint Calculator</a>
 
-            <a href="carbonfootprintcal.html" class="calculator-btn">Carbon Footprint Calculator</a>
             <a href="energyconsumtioncal.html" class="calculator-btn">Energy Consumption Calculator</a>
             <a href="exposurelevelcal.html" class="calculator-btn">Exposure Level (Concentration) Calculator</a>
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration(MAC) Calculator</a>
@@ -617,9 +617,12 @@
              <a href="recyclingcarbonfootprintcalculator.html" class="calculator-btn">Recycling Carbon Footprint Savings Calculator </a>
              <a href="recyclingimpactcal.html" class="calculator-btn">Recycling Impact Calculator </a>
              <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
+             <a href="carbonfootprintcal.html" class="calculator-btn">Travel Carbon Footprint Calculator</a>
+
+             <a href="vaporpressurecalculator.html" class="calculator-btn">Vapor Pressure Calculator</a>
 
             
-            <a href="wastesegregationcl.html" class="calculator-btn">Waste Segregation Efficiency Calculatorr</a>
+            <a href="wastesegregationcl.html" class="calculator-btn">Waste Segregation Efficiency Calculator</a>
 
 
         </div>
