--- a/fallcal.html
+++ b/fallcal.html
@@ -585,6 +585,9 @@ strong{
         After entering these values, click the <strong>Calculate Fall Clearance</strong> button. 
         The result will show the total fall clearance required to ensure safety.
     </p>
+    <div class="image-content" style="text-align: center;">
+        <img src="images/vindus_clients_images/fallcal4.jpg" alt="Diagram illustrating fall distance calculation" height="300" width="300">
+    </div>
 </div>
 
   <script>
