--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -318,6 +318,32 @@
         padding: 10px 20px;
     }
 }
+.custom-search {
+        width: 100%;
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 10px 15px;
+        border: 1px solid #1560bd;
+        border-radius: 8px;
+        font-size: 16px;
+        background-color:rgb(213, 241, 252);
+        color: white;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .custom-search::placeholder {
+        color: #807e7e;
+    }
+
+  
+
+    /* Responsive */
+    @media (max-width: 576px) {
+        .custom-search {
+            font-size: 14px;
+            padding: 8px 12px;
+        }
+    }
 </style>
 	</head>
 
@@ -605,9 +631,13 @@
         <div class="text-center mb-4">
             <a href="calculatorqehs.html" class="btn btn-back-to-all"> &#x21A9; Back to All Calculators</a>
         </div>
+       
         <h2 class="sub-heading">Fire Safety Calculators</h2>
-        <div class="button-container">
-            <a href="burnratecal.html" class="calculator-btn">Burn rate(Chemical exposure) Calculator</a>
+        <div class="text-center mb-4">
+            <input type="text" id="searchBar" class="form-control custom-search" placeholder="🔍 Search Calculator..." onkeyup="filterCalculators()">
+        </div>
+        <div class="button-container" id="calculatorList">
+                        <a href="burnratecal.html" class="calculator-btn">Burn rate(Chemical exposure) Calculator</a>
 
             <a href="fireloadercal.html" class="calculator-btn">Fire Load Calculator</a>
                 <a href="fireextinguishercal.html" class="calculator-btn">Fire Extinguisher Placement Calculator</a>
@@ -620,6 +650,22 @@
 
 </div>
     
+<script>
+    function filterCalculators() {
+        let input = document.getElementById("searchBar").value.toLowerCase();
+        let buttons = document.querySelectorAll(".calculator-btn");
+
+        buttons.forEach(btn => {
+            let text = btn.innerText.toLowerCase();
+            if (text.includes(input)) {
+                btn.style.display = "inline-block";
+            } else {
+                btn.style.display = "none";
+            }
+        });
+    }
+</script>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
