removed cost of estimater

--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -644,7 +644,7 @@
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
             <a href="costofaccident.html" class="calculator-btn">Cost of Accident Calculator</a>
-            <a href="drillingcostestimator.html" class="calculator-btn">Drilling Cost Estimator Calculator</a>
+            <!-- <a href="drillingcostestimator.html" class="calculator-btn">Drilling Cost Estimator Calculator</a> -->
 
           
             <a href="densityofmaterial.html" class="calculator-btn">Density of a material Calculator</a>
