changes aand added 13 calculators

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -635,18 +635,28 @@
             <input type="text" id="searchBar" class="form-control custom-search" placeholder="🔍 Search Calculator..." onkeyup="filterCalculators()">
         </div>
         <div class="button-container" id="calculatorList">
-                        <a href="ambientnoisecal.html" class="calculator-btn">Ambient Noise Level Calculator</a>
+
+            <a href="ambientnoisecal.html" class="calculator-btn">Ambient Noise Level Calculator</a>
+            <a href="arithmeticmeantemperaturedifferencecalculator.html" class="calculator-btn">Arithmetic Mean Temperature Difference (AMTD) Calculator</a>
+
             <a href="airflowrate.html" class="calculator-btn">Air Flow Rate Calculator</a>
+            <a href="carnoteffiencycalculator.html" class="calculator-btn">Carnot Efficiency Calculator</a>
+
             <a href="envcarbonfootprintcal.html" class="calculator-btn">Environmental(Impact) Carbon Footprint Calculator</a>
-            <a href="enthalpyofevaporationofwetsteam.html" class="calculator-btn">Wet Steam Enthalpy Calculator</a>
 
 
             <a href="energyconsumtioncal.html" class="calculator-btn">Energy Consumption Calculator</a>
             <a href="exposurelevelcal.html" class="calculator-btn">Exposure Level (Concentration) Calculator</a>
+            <a href="flashsteamcalculator.html" class="calculator-btn">Flash Steam Calculator</a>
+            <a href="logmeantemperaturedifference .html" class="calculator-btn">Log Mean Temperature Difference (LMTD) Calculator</a>
+
+
             <a href="maximumallowconcentration.html" class="calculator-btn">Maximum Allowable Concentration(MAC) Calculator</a>
 
              <a href="recyclingcarbonfootprintcalculator.html" class="calculator-btn">Recycling Carbon Footprint Savings Calculator </a>
              <a href="recyclingimpactcal.html" class="calculator-btn">Recycling Impact Calculator </a>
+             <a href="rankineefficiencycalculator.html" class="calculator-btn">Rankine Efficiency Calculator </a>
+
              <a href="specificvolumeofwetsteam.html" class="calculator-btn">Specific volume of wet steam</a>
 
              <a href="thermodynamiccal.html" class="calculator-btn">Thermodynamic Temperature Calculator</a>
@@ -654,7 +664,8 @@
 
              <a href="vaporpressurecalculator.html" class="calculator-btn">Vapor Pressure Calculator</a>
 
-            
+             <a href="enthalpyofevaporationofwetsteam.html" class="calculator-btn">Wet Steam Enthalpy Calculator</a>
+
             <a href="wastesegregationcl.html" class="calculator-btn">Waste Segregation Efficiency Calculator</a>
 
 
