--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -638,6 +638,8 @@
         </div>
         <div class="button-container" id="calculatorList">
                         <a href="bmicalculator.html" class="calculator-btn">BMI Calculator</a>
+                        <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
+
 
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
 
