--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -644,10 +644,16 @@
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
             <a href="costofaccident.html" class="calculator-btn">Cost of Accident Calculator</a>
+            <a href="casingburstpressurecalculator.html" class="calculator-btn">Casing Burst Pressure Calculator</a>
+            <a href="casingcolapsepresurecal.html" class="calculator-btn">Casing Collapse Pressure Calculator</a>
+
+
             <!-- <a href="drillingcostestimator.html" class="calculator-btn">Drilling Cost Estimator Calculator</a> -->
 
           
             <a href="densityofmaterial.html" class="calculator-btn">Density of a material Calculator</a>
+            <a href="daltonslawofpartialpressures.html" class="calculator-btn">Dalton's Law of Partial Pressures Calculator</a>
+
             <a href="earthingcalculator.html" class="calculator-btn">Earthing System Calculator</a>
             <a href="energytransformcal.html" class="calculator-btn">Energy Transfer Calculator</a>
             <a href="ergonomicriskfactor.html" class="calculator-btn">Ergonomic Risk Score Calculator</a>
@@ -659,6 +665,9 @@
             <a href="fallcal.html" class="calculator-btn">Fall Clearance Calculator</a>
             <a href="incidentratecal.html" class="calculator-btn">Incidence Rate Calculator</a>
             <a href="ipchecker.html" class="calculator-btn">IP Rating Checker</a>
+            <a href="kicktolerancecalculator.html" class="calculator-btn">Kick Tolerance Calculator</a>
+
+
             <a href="laddercal.html" class="calculator-btn">Ladder Length Calculator</a>
             <a href="ltifrcal.html" class="calculator-btn">Lost Time Injury Frequency Rate Calculator</a>
             <a href="liveloadcal.html" class="calculator-btn">Live Load Calculation (LL)</a>
