--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -669,7 +669,7 @@
 
 
             <a href="laddercal.html" class="calculator-btn">Ladder Length Calculator</a>
-            <a href="ltifrcal.html" class="calculator-btn">Lost Time Injury Frequency Rate Calculator</a>
+            <a href="ltifrcal.html" class="calculator-btn">Lost Time Injury Frequency Rate (LTIR) Calculator</a>
             <a href="liveloadcal.html" class="calculator-btn">Live Load Calculation (LL)</a>
             <a href="loadperlegcal.html" class="calculator-btn">Load Distribution Per Leg</a>
             <a href="leadingsafetyindicator.html" class="calculator-btn">Leading Safety Indicators</a>
@@ -680,7 +680,7 @@
 
 
             <a href="nema&ipratecal.html" class="calculator-btn">NEMA and IP Ratings Calculator</a>
-            <a href="trir.html" class="calculator-btn">OSHA Total Recordable Incident Rate Calculator</a>
+            <a href="trir.html" class="calculator-btn">OSHA Total Recordable Incident Rate (TRIR) Calculator</a>
             <a href="dartcal.html" class="calculator-btn">OSHA DART Rate Calculator</a>
             <a href="ppecomplianceratecal.html" class="calculator-btn">PPE Compliance Rate</a>
             <a href="risklevelassessment.html" class="calculator-btn">Risk Level Assessment</a>
