--- a/pipesizingcalculator.html
+++ b/pipesizingcalculator.html
@@ -549,74 +549,70 @@ strong{
 
 
 <div class="calculator-container">
-    <h2>Heat Detector Response Time Calculator</h2>
+    <h2>FM-200 / NOVEC 1230 - Pipe Sizing Calculator</h2>
+    
     <div class="form-group">
-        <label for="rti">Response Time Index (RTI) (m½/s):</label>
-        <input type="number" id="rti" placeholder="Enter RTI value">
+        <label for="flowRate">Flow Rate (kg/sec):</label>
+        <input type="number" id="flowRate" placeholder="Enter agent flow rate">
     </div>
     <div class="form-group">
-        <label for="velocity">Hot Gas Velocity (V) (m/s):</label>
-        <input type="number" id="velocity" placeholder="Enter velocity of hot gases">
+        <label for="velocity">Velocity of Agent (m/s):</label>
+        <input type="number" id="velocity" placeholder="Enter velocity">
     </div>
-    <button class="cal-btn" onclick="calculateHeatDetectorResponseTime()">Calculate Response Time</button>
+    <div class="form-group">
+        <label for="coefficient">Pipe Friction Coefficient:</label>
+        <input type="number" id="coefficient" placeholder="Enter manufacturer-specified coefficient">
+    </div>
+
+    <button class="cal-btn" onclick="calculatePipeSize()">Calculate Pipe Size</button>
     <div class="result" id="result"></div>
 </div>
 
 <div class="note-container">
     <h3>Note:</h3>
     <p>
-        This calculator helps determine how quickly a heat detector will respond to a fire. 
-        The response time is influenced by the detector's design and the movement of hot gases.
+        This calculator determines the **optimal pipe diameter** for FM-200 / NOVEC 1230 fire suppression systems, ensuring **proper agent distribution**.
     </p>
+
+    <h3>Why is Pipe Sizing Important?</h3>
+    <ul>
+        <li><strong>Ensures Even Agent Distribution:</strong> Prevents pressure drops and inconsistent discharge.</li>
+        <li><strong>Maintains Required Flow Rate:</strong> Ensures the agent reaches all areas within the correct time.</li>
+        <li><strong>Regulatory Compliance:</strong> Meets NFPA 2001 and ISO 14520 standards.</li>
+        <li><strong>Prevents Over-Pressurization:</strong> Protects pipes from excessive pressure that can damage the system.</li>
+    </ul>
 
     <h3>Understanding the Parameters:</h3>
     <ul>
-        <li><strong>Response Time Index (RTI):</strong> A measure of how fast the heat detector responds to temperature changes. Higher values indicate slower response times.</li>
-        <li><strong>Hot Gas Velocity (V):</strong> The speed at which hot gases move in the environment, affecting how quickly the detector activates.</li>
+        <li><strong>Flow Rate (Q):</strong> The amount of FM-200 or NOVEC 1230 released per second (kg/sec).</li>
+        <li><strong>Velocity (V):</strong> The recommended speed of the agent inside the pipe (m/s).</li>
+        <li><strong>Pipe Friction Coefficient (C):</strong> A manufacturer-provided value accounting for resistance inside the pipe.</li>
     </ul>
 
-    <h3>How the Calculation Works:</h3>
+    <h3>What does the result mean?</h3>
     <p>
-        The response time of a heat detector depends on its RTI and the velocity of the hot gases. 
-        A higher gas velocity results in a faster response time, while a higher RTI indicates a slower response.
-    </p>
-
-    <p>
-        Enter the **RTI value** and **hot gas velocity** to calculate how quickly the heat detector will activate in case of a fire.
+        The result provides the **minimum pipe diameter required** to handle the suppression agent efficiently without exceeding pressure limits.
     </p>
 </div>
 
 <script>
-   function calculateHeatDetectorResponseTime() {
-    const RTI = parseFloat(document.getElementById('rti').value);
-    const V = parseFloat(document.getElementById('velocity').value);
-    const resultElement = document.getElementById('result');
+    function calculatePipeSize() {
+        const Q = parseFloat(document.getElementById('flowRate').value);
+        const V = parseFloat(document.getElementById('velocity').value);
+        const C = parseFloat(document.getElementById('coefficient').value);
+        const resultElement = document.getElementById('result');
 
-    if (isNaN(RTI) || RTI <= 0 || isNaN(V) || V <= 0) {
-        resultElement.innerHTML = "<span style='color: red;'>Please enter valid positive numbers for all fields.</span>";
-        return;
+        if (isNaN(Q) || Q <= 0 || isNaN(V) || V <= 0 || isNaN(C) || C <= 0) {
+            resultElement.innerHTML = "<span style='color: red;'>Please enter valid positive numbers for all fields.</span>";
+            return;
+        }
+
+        // Pipe Sizing Formula: D = sqrt(Q / (V × C))
+        const D = Math.sqrt(Q / (V * C)).toFixed(2);
+
+        resultElement.innerHTML = `The minimum required pipe diameter is <strong>${D} cm</strong> to ensure proper agent flow and distribution.`;
     }
-
-    const t = RTI / Math.sqrt(V);
-    let feedback = "";
-    let color = "";
-
-    if (t < 30) {
-        feedback = "This is a <strong>fast response time</strong>, ideal for high-risk areas where rapid fire detection is crucial.";
-        color = "green";
-    } else if (t >= 30 && t <= 90) {
-        feedback = "This is a <strong>moderate response time</strong>, suitable for general fire protection but may require additional detection measures in critical areas.";
-        color = "orange";
-    } else {
-        feedback = "This is a <strong>slow response time</strong>, which may delay fire detection. Consider using a heat detector with a lower RTI or improving airflow conditions.";
-        color = "red";
-    }
-
-    resultElement.innerHTML = `The estimated response time of the heat detector is <strong style="color:blue;">${t.toFixed(2)}</strong> seconds.<br><span style="color: ${color};">${feedback}</span>`;
-}
-
 </script>
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
